QtCore/gen_qarraydata.h

class QArrayData;
typedef struct QArrayData QArrayData;
ptrdiff_t QArrayData_allocatedCapacity(QArrayData* self);
ptrdiff_t QArrayData_constAllocatedCapacity(const QArrayData* self);
bool QArrayData_ref(QArrayData* self);
bool QArrayData_deref(QArrayData* self);
bool QArrayData_isShared(const QArrayData* self);
bool QArrayData_needsDetach(const QArrayData* self);
ptrdiff_t QArrayData_detachCapacity(const QArrayData* self, ptrdiff_t newSize);
struct miqt_map /* tuple of QArrayData* and void* */  QArrayData_reallocateUnaligned(QArrayData* data, void* dataPointer, ptrdiff_t objectSize, ptrdiff_t newCapacity, int option);
void QArrayData_deallocate(QArrayData* data, ptrdiff_t objectSize, ptrdiff_t alignment);
void QArrayData_delete(QArrayData* self);